// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource component snaps renderers should render a Resource without icon 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item"
  role="listitem"
  tabIndex="0"
>
  <div
    className="data-container theme-data-container"
  >
    <span
      className="title theme-title"
    >
      Title with few actions
    </span>
    <small
      className="author theme-author"
    >
      owned by Jean-Pierre DUPONT, over 2 years ago
    </small>
  </div>
</div>
`;

exports[`Resource component snaps renderers should render a regular Resource 1`] = `
<div
  aria-label="Title with few actions"
  aria-posinset={1}
  className="resource-item theme-resource-item"
  role="listitem"
  tabIndex="0"
>
  <Icon
    name="talend-file-xls-o"
  />
  <div
    className="data-container theme-data-container"
  >
    <span
      className="title theme-title"
    >
      Title with few actions
    </span>
    <small
      className="author theme-author"
    >
      owned by Jean-Pierre DUPONT, over 2 years ago
    </small>
  </div>
</div>
`;

exports[`Resource component snaps renderers should render an empty Resource 1`] = `null`;
